k8s_files/v1/app/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app-dt
  name: app-dt
  namespace: dev-dt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-dt
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-dt
    spec:
      containers:
      - image: app-dt:1.1.0
        name: app-dt
        resources: {}
        ports:
        - containerPort: 8000
status: {}
