k8s_files/v1/app/appsvc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app-dt
  name: app-dt
  namespace: dev-dt
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: app-dt
  type: ClusterIP
status:
  loadBalancer: {}
