k8s_files/v1/app/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appingress
  namespace: dev-dt
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-dt
            port:
              number: 8000
